Changes for DateTime::Set

0.3500 2015-11-10
- [rt.cpan.org #108633] Recurrent event does not intersect indefinite future,
  test contributed by Brett Watson.

0.3400 2014-02-12
- documentation and packaging fixes - by David Steinbrunner.
- version number using 4 digits - requested by David Marshall.

0.33   2013-09-15
- bugfix in SpanSet->grep. Reported by Andreas Isberg

0.32   2013-08-27
- ignore duration signal in DateTime::Span->from_datetime_and_duration()
  and use the 'end'/'start' parameters as a cue for the time direction,
  suggested by David Pottage
- more tests of intersections with open/closed ended spans

0.30   2011-04-11
- new test file t/21from_recurrence.t 
  Contributed by Olivier Mengue

0.29   2011-04-01 
- new method is_empty_set - bug #50750

0.28   2009-07-19
- optimized DateTime::Set->as_list().
  This works around a segfault reported by Nils Grunwald.

0.27   2009-04-02
- fixed DateTime::Spanset duration() method.
  Reported by Anton Berezin <tobez@tobez.org>

0.26   2008-12-25
- fixed DateTime::Spanset current() and set_time_zone() methods. 
  Report and tests by Elliot Shank.

0.25   2005-10-05
- t/15time_zone.t does it's own time zone "add_duration" handling

0.24   2005-10-03
- _recurrence.pm warned when the recurrence didn't have occurrences before
  a given start date. Reported by Mark D. Anderson. 

0.23   2005-10-03
- _recurrence.pm died when the recurrence didn't have occurrences before
  a given start date. Reported by Mark D. Anderson. 

0.22   2005-05-06
- DateTime::Set 0.21 dies when as_list is asked to produce a list from
  outside the range of the set. Patch contributed by Stephen Gowing.

0.21   2005-04-06
- no hard limit in count() and as_list(); removed the warnings from the docs.

0.20   2005-02-28
- changed tests to use en_US instead of pt_BR (which changes every year) 
  by Dave Rolsky.
- optimized SpanSet methods for special cases:
  start_set()
  end_set()
  contains( $dt )
  intersects( $dt )